--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
     </properties>
 
     <dependencies>
-        <!-- discard logging from hive -->
+        <!-- send logging to java.util.logging -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>jcl-over-slf4j</artifactId>
@@ -56,14 +56,15 @@
 
         <dependency>
             <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-nop</artifactId>
+            <artifactId>slf4j-api</artifactId>
             <version>${dep.slf4j.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
+            <artifactId>slf4j-jdk14</artifactId>
             <version>${dep.slf4j.version}</version>
+            <scope>runtime</scope>
         </dependency>
 
         <!-- thrift -->
